--- a/product.html
+++ b/product.html
@@ -40,11 +40,11 @@
         </div>
       </div>
     </nav>
+
     <section class="py-5">
       <div class="container px-4 px-lg-5 my-5">
-        <div
-          class="row gx-4 gx-lg-5 align-items-center product-container"
-        ></div>
+        <div class="row gx-4 gx-lg-5 align-items-center product-container">
+        </div>
       </div>
     </section>
     >
@@ -54,6 +54,6 @@
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/product.js"></script>
+    <script type="module" src="js/product.js"></script>
   </body>
 </html>
