Criação e começo da implementação do Carrinho de compras

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
     </button>
     <div class="d-flex justify-content-between" id="navbarSupportedContent">
       <form class="d-flex">
-        <button class="btn btn-outline-dark" type="submit">
+        <a href="cart.html" class="btn btn-outline-dark" id="button-cart" type="submit">
           <i class="bi-cart-fill me-1"></i>
           Cart
           <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-        </button>
+        </a>
       </form>
     </div>
   </div>
