--- a/cart.html
+++ b/cart.html
@@ -43,16 +43,17 @@
 
     <section class="py-5">
       <div class="container px-4 px-lg-5 my-5">
-        <div class="row gx-4 gx-lg-5 align-items-center product-container">
+        <div class="row gx-4 gx-lg-5 align-items-center" id="cart-container" style="min-height: 50vh;">
         </div>
       </div>
     </section>
+
     <footer class="py-5 bg-dark">
       <div class="container">
         <p class="m-0 text-center text-white">Copyright &copy; Simples 2025</p>
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="js/product.js"></script>
+    <script type="module" src="js/cart.js"></script>
   </body>
 </html>
