--- a/cart.html
+++ b/cart.html
@@ -43,10 +43,22 @@
 
     <section class="py-5">
       <div class="container px-4 px-lg-5 my-2">
-        <div class="row gx-4 gx-lg-5 align-items-center" id="cart-container" style="min-height: 50vh;">
+        <div class="row gx-4 gx-lg-5 align-items-center" id="cart-container" style="min-height: 40.9vh;">
         </div>
       </div>
     </section>
+
+  <div class="container px-4 px-lg-5 my-2">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Valor total: </h5>
+        <span class="text-danger fw-bold ms-2" id="ValorCompra"></span>
+        <div class="d-flex justify-content-end">
+          <a href="#" class="btn btn-primary ">Finalizar compra</a>
+        </div>
+      </div>
+    </div>
+  </div>
 
     <footer class="py-5 bg-dark">
       <div class="container">
@@ -54,6 +66,6 @@
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="js/cart.js"></script>
+    <script type="module" src="./js/cart.js"></script>
   </body>
 </html>
