--- a/product.html
+++ b/product.html
@@ -53,6 +53,6 @@
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="js/product.js"></script>
+    <script type="module" src="./js/product.js"></script>
   </body>
 </html>
